--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "version": "1.0.0",
   "name": "ls-javascript",
   "dependencies": {
-    "typescript": "^1.8.2",
-    "vscode-languageserver": "^2.2.1",
+    "body-parser": "^1.15.2",
+    "es6-promise": "^3.2.1",
+    "express": "^4.14.0",
     "find-files-excluding-dirs": "alexsaveliev/find-files-excluding-dirs",
-    "read-json-sync": "^1.1.1"
+    "node-fs": "^0.1.7",
+    "node-mkdirp": "0.0.1",
+    "read-json-sync": "^1.1.1",
+    "typescript": "^1.8.2",
+    "vscode-languageserver": "^2.2.1"
   }
 }
