--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-mkdirp": "0.0.1",
     "read-json-sync": "^1.1.1",
     "typescript": "^1.8.2",
-    "vscode-languageserver": "^2.2.1"
+    "vscode-languageserver": "^2.2.1",
+    "sanitize-html": "^1.13.0"
   }
 }
