--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "version": "1.0.0",
   "name": "ls-javascript",
+  "engines": {
+     "vscode": "^1.4.0"},
   "dependencies": {
     "body-parser": "^1.15.2",
     "commander": "^2.9.0",
@@ -14,6 +16,18 @@
     "vscode-languageserver": "^2.2.1",
     "vscode-languageserver-types": "^1.0.3",
     "sanitize-html": "^1.13.0",
-    "jsonpath-plus": "^0.15.0"
-  }
+    "jsonpath-plus": "^0.15.0",
+    "vscode-languageclient": "^2.4.2-next.12"
+  },
+
+"scripts": {
+                "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
+                "compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
+                "postinstall": "node ./node_modules/vscode/bin/install",
+                "vscode": "npm run vscode:prepublish && VSCODE=$(which code-insiders || which code || echo echo ERROR: neither the code nor code-insiders vscode executable is installed); USER=dummy-dont-share-vscode-instance $VSCODE --user-data-dir=$PWD/.vscode-dev/user-data --extensionHomePath=$PWD/.vscode-dev/extensions --extensionDevelopmentPath=$PWD $*"
+        },
+
+ "devDependencies": {
+                "vscode": "^0.11.0"
+        }
 }
