--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     },
     "files": [
         "src/language-server.ts",
-        "src/language-server-stdio.ts"
+        "src/language-server-stdio.ts",
+        "src/build-server.ts"
     ],
     "exclude": [
         "node_modules"
