--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vscode-languageserver": "^2.2.1",
     "vscode-languageserver-types": "^1.0.3",
     "sanitize-html": "^1.13.0",
-    "jsonpath-plus": "^0.15.0"
+    "jsonpath-plus": "^0.15.0",
+    "glob": "^7.1.0"
   }
 }
