--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "version": "1.0.0",
   "name": "ls-javascript",
   "dependencies": {
+    "async": "^2.0.1",
     "body-parser": "^1.15.2",
     "commander": "^2.9.0",
     "es6-promise": "^3.2.1",
     "express": "^4.14.0",
     "find-files-excluding-dirs": "alexsaveliev/find-files-excluding-dirs",
+    "jsonpath-plus": "^0.15.0",
     "node-fs": "^0.1.7",
     "node-mkdirp": "0.0.1",
     "read-json-sync": "^1.1.1",
+    "sanitize-html": "^1.13.0",
     "typescript": "^2.0.0",
     "vscode-languageserver": "^2.2.1",
-    "vscode-languageserver-types": "^1.0.3",
-    "sanitize-html": "^1.13.0",
-    "jsonpath-plus": "^0.15.0"
+    "vscode-languageserver-types": "^1.0.3"
   }
 }
