Revert "Merge pull request #18 from antonina-cherednichenko/build-server-support"
This reverts commit f0cd5f09565e6701e7a5015ebd8cbeb56fcb073e, reversing
changes made to 6f09a87d810feab6cb736dda1c6c7067d5185ad0.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "sanitize-html": "^1.13.0",
     "typescript": "^2.0.0",
     "vscode-languageserver": "^2.2.1",
-    "vscode-languageserver-types": "^1.0.3",
-    "glob": "^7.1.0"
+    "vscode-languageserver-types": "^1.0.3"
   }
 }
