--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "version": "1.0.0",
   "name": "ls-javascript",
+  "engines" : { 
+  	"node" : ">=5.10.0" 
+  },
   "dependencies": {
     "async": "^2.0.1",
     "body-parser": "^1.15.2",
