--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "version": "1.0.0",
-  "name": "ls-javascript",
-  "engines" : { 
-  	"node" : ">=5.10.0" 
+  "name": "langserver-typescript",
+  "engines" : {
+  	"node" : ">=5.10.0"
   },
   "dependencies": {
     "async": "^2.0.1",
