--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "typescript": "alexsaveliev/typescript",
     "vscode-languageserver": "^2.2.1",
     "vscode-languageserver-types": "^1.0.3"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.1.0",
+    "tmp": "0.0.29"
   }
 }
