--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "version": "1.0.0",
   "name": "javascript-typescript-langserver",
-  "engines" : {
-  	"node" : ">=5.10.0"
+  "engines": {
+    "node": ">=5.10.0"
   },
   "scripts": {
     "test": "./node_modules/.bin/mocha build/test/*.js"
   },
   "dependencies": {
-    "async": "^2.0.1",
+    "@types/async": "^2.0.32",
+    "@types/node": "^6.0.46",
+    "async": "^2.0.32",
     "body-parser": "^1.15.2",
     "commander": "^2.9.0",
     "es6-promise": "^3.2.1",
@@ -24,8 +26,11 @@
     "vscode-languageserver-types": "^1.0.3"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^3.1.0",
+    "@types/chai": "^3.4.34",
+    "@types/mocha": "^2.2.32",
+    "@types/tmp": "0.0.31",
+    "chai": "^3.4.34",
+    "mocha": "^2.2.32",
     "tmp": "0.0.29"
   }
 }
