--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "compilerOptions": {
         "target": "ES5",
         "lib": ["es2016"],
+        "types": ["node", "mocha", "chai"],
         "module": "commonjs",
         "moduleResolution": "node",
         "sourceMap": true,
