- faster initialization time for hover, definition, workspace/symbol, references - CLI arg for node cluster size - minor changes: file filtering functions, log number of returned references

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,11 @@
         "sourceMap": true,
         "outDir": "build"
     },
+    "formatCodeOptions": {
+        "indentSize": 4,
+        "tabSize": 4,
+        "convertTabsToSpaces": true
+    },
     "files": [
         "src/language-server.ts",
         "src/language-server-stdio.ts",
