--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ language: node_js
 node_js:
   - "6"
 
-install:
-  - npm install
+cache:
+  yarn: true
+  directories:
+    - node_modules
 
 script:
-  - npm run fmt-check
-  - npm test
+  - yarn run fmt-check
+  - yarn test
