--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "node-fs": "^0.1.7",
         "node-mkdirp": "0.0.1",
         "sanitize-html": "^1.13.0",
-        "typescript": "^2.0.6",
+        "typescript": "2.1.1",
         "vscode": "^1.0.1",
         "vscode-languageserver": "^2.2.1",
         "vscode-languageserver-types": "^1.0.3"
