--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "node": ">=5.10.0"
     },
     "scripts": {
+        "lib": "./make_lib.sh",
         "test": "./node_modules/.bin/mocha -r ts-node/register src/test/**/*.ts",
         "fmt-check": "./node_modules/.bin/tsfmt --verify",
         "fmt": "./node_modules/.bin/tsfmt -r"
