--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
         "module": "commonjs",
         "moduleResolution": "node",
         "sourceMap": true,
-        "outDir": "build",
+        "outDir": "lib",
+	"declaration": true,
+	"declarationDir": "lib",
 	"allowUnreachableCode": false,
 	"allowUnusedLabels": false,
 	"noImplicitReturns": true,
@@ -15,6 +17,7 @@
 	"noImplicitAny": true
     },
     "exclude": [
-        "node_modules"
+        "node_modules",
+	"lib"
     ]
 }
