--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "test": "./node_modules/.bin/mocha -r ts-node/register src/test/**/*.ts",
         "fmt-check": "./node_modules/.bin/tsfmt --verify",
-        "fmt": "./node_modules/.bin/tsfmt -r"
+        "fmt": "./node_modules/.bin/tsfmt -r",
+        "postinstall": "./node_modules/.bin/tsc"
     },
     "dependencies": {
         "@types/async": "^2.0.32",
