--- a/package.json
+++ b/package.json
@@ -1,6 +1,25 @@
 {
-    "version": "1.0.0",
     "name": "javascript-typescript-langserver",
+    "homepage": "https://github.com/sourcegraph/javascript-typescript-langserver",
+    "author": "Sourcegraph",
+    "version": "1.0.0",
+    "license": "Apache-2.0",
+    "description": "A JavaScript/TypeScript analysis library that supports intelligent editor plugin operations like jump-to-def and find-refs. Implements the Language Server Protocol.",
+    "keywords": [
+        "LSP",
+        "compiler",
+        "language",
+        "javascript",
+        "editor",
+        "typescript"
+    ],
+    "bugs": {
+        "url": "https://github.com/sourcegraph/javascript-typescript-langserver/issues"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/sourcegraph/javascript-typescript-langserver.git"
+    },
     "engines": {
         "node": ">=6.0.0",
         "vscode": "1.x.x"
