Excluding compiled JS files from project
- excluded development file from the package, included NOTICE

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     },
     "files": [
         "lib",
-        "bin/build"
+        "NOTICE"        
     ],
     "bin": {
         "javascript-typescript-langserver": "./lib/language-server.js",
