--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
   "dependencies": {
     "@types/async": "^2.0.38",
     "@types/bluebird": "^3.0.37",
+    "@types/chai-as-promised": "^0.0.29",
     "@types/glob": "^5.0.30",
     "@types/mz": "^0.0.30",
     "@types/node": "^6.0.46",
     "async": "^2.1.5",
     "bluebird": "^3.4.7",
+    "chai-as-promised": "^6.0.0",
     "commander": "^2.9.0",
     "glob": "^7.1.1",
     "mz": "^2.6.0",
@@ -50,8 +52,9 @@
     "@types/mocha": "^2.2.32",
     "@types/sinon": "^1.16.35",
     "chai": "^3.4.34",
-    "mocha": "^2.2.32",
+    "mocha": "^3.2.0",
     "sinon": "^1.17.7",
+    "source-map-support": "^0.4.11",
     "ts-node": "^1.6.1",
     "typescript-formatter": "^4.0.0"
   },
