Improve scripts an Travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ node_js:
 
 cache:
   yarn: true
-  directories:
-    - node_modules
 
 script:
+  - yarn run build
   - yarn run fmt-check
   - yarn test
