--- a/.editorconfig
+++ b/.editorconfig
@@ -7,5 +7,9 @@ trim_trailing_whitespace = true
 indent_style = tab
 indent_size = 4
 
+[*.{json,yml}]
+indent_style = space
+indent_size = 2
+
 [*.md]
 trim_trailing_whitespace = false
