Remove tsfmt and bin scripts
tsfmt is too buggy from my experience and TSLint is better for style checking
bin scripts can all be done through package.json scripts

--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
   "scripts": {
     "test": "mocha -r source-map-support/register lib/**/*.js",
     "build": "tsc",
-    "watch": "tsc -w",
-    "fmt-check": "node bin/fmt-check",
-    "fmt": "node bin/fmt"
+    "watch": "tsc -w"
   },
   "dependencies": {
     "@types/async": "^2.0.38",
