Big refactor including move from legacy vfs to workspace/files extension (#82)
* Add workspace/files extension

* Overhaul tests

* Improve scripts in Travis config

* Remove tsfmt and bin scripts

tsfmt is too buggy from my experience and TSLint is better for style checking
bin scripts can all be done through package.json scripts

* Improve package.json test script

* Format tsconfig.json

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,7 @@ node_js:
 
 cache:
   yarn: true
-  directories:
-    - node_modules
 
 script:
-  - yarn run fmt-check
+  - yarn run build
   - yarn test
