--- a/package.json
+++ b/package.json
@@ -25,26 +25,35 @@
     "vscode": "1.x.x"
   },
   "scripts": {
-    "test": "node bin/test",
-    "fmt-check": "node bin/fmt-check",
-    "fmt": "node bin/fmt",
-    "prepublish": "node bin/build",
-    "postinstall": "node bin/build"
+    "test": "mocha --require source-map-support/register --timeout 5000 --slow 2000 lib/test/**/*.js",
+    "build": "tsc",
+    "watch": "tsc -w"
   },
   "dependencies": {
-    "@types/async": "^2.0.32",
-    "@types/node": "^6.0.46",
-    "async": "^2.0.32",
+    "async": "^2.1.5",
+    "bluebird": "^3.4.7",
     "commander": "^2.9.0",
+    "glob": "^7.1.1",
+    "mz": "^2.6.0",
     "typescript": "2.1.1",
     "vscode-languageserver": "^2.2.1",
-    "vscode-languageserver-types": "^1.0.3"
+    "vscode-languageserver-types": "^1.0.3",
+    "yarn": "^0.21.3"
   },
   "devDependencies": {
+    "@types/async": "^2.0.38",
+    "@types/bluebird": "^3.0.37",
     "@types/chai": "^3.4.34",
+    "@types/chai-as-promised": "^0.0.29",
+    "@types/glob": "^5.0.30",
+    "@types/mz": "^0.0.30",
     "@types/mocha": "^2.2.32",
+    "@types/node": "^6.0.46",
     "chai": "^3.4.34",
-    "mocha": "^2.2.32",
+    "chai-as-promised": "^6.0.0",
+    "mocha": "^3.2.0",
+    "sinon": "^1.17.7",
+    "source-map-support": "^0.4.11",
     "ts-node": "^1.6.1",
     "typescript-formatter": "^4.0.0"
   },
