--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vscode": "1.x.x"
   },
   "scripts": {
+    "clean": "rimraf lib",
     "test": "mocha --require source-map-support/register --timeout 5000 --slow 2000 lib/test/**/*.js",
     "lint": "tslint -t msbuild -c tslint.json 'src/**/*.ts'",
     "build": "tsc",
@@ -37,8 +38,9 @@
     "glob": "^7.1.1",
     "mz": "^2.6.0",
     "typescript": "2.1.1",
-    "vscode-languageserver": "^2.2.1",
-    "vscode-languageserver-types": "^1.0.3",
+    "vscode-jsonrpc": "^3.1.0",
+    "vscode-languageserver": "^3.1.0",
+    "vscode-languageserver-types": "^3.0.3",
     "yarn": "^0.21.3"
   },
   "devDependencies": {
@@ -53,6 +55,7 @@
     "chai": "^3.4.34",
     "chai-as-promised": "^6.0.0",
     "mocha": "^3.2.0",
+    "rimraf": "^2.6.1",
     "sinon": "^1.17.7",
     "source-map-support": "^0.4.11",
     "ts-node": "^1.6.1",
