--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "chai": "^3.4.34",
     "chai-as-promised": "^6.0.0",
     "mocha": "^3.2.0",
+    "nyc": "^10.1.2",
     "rimraf": "^2.6.1",
     "sinon": "^1.17.7",
     "source-map-support": "^0.4.11",
