--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "javascript-typescript-langserver",
   "homepage": "https://github.com/sourcegraph/javascript-typescript-langserver",
   "author": "Sourcegraph",
-  "version": "1.3.1",
+  "version": "2.0.0-pre.1",
   "license": "Apache-2.0",
   "description": "Implementation of the Language Server Protocol for JavaScript and TypeScript",
   "keywords": [
