--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bluebird": "^3.4.7",
     "commander": "^2.9.0",
     "glob": "^7.1.1",
+    "lodash": "^4.17.4",
     "mz": "^2.6.0",
     "typescript": "2.2.1",
     "vscode-jsonrpc": "^3.1.0",
@@ -45,20 +46,20 @@
     "yarn": "^0.21.3"
   },
   "devDependencies": {
-    "@types/async": "^2.0.38",
-    "@types/bluebird": "^3.0.37",
-    "@types/chai": "^3.4.34",
-    "@types/chai-as-promised": "^0.0.29",
-    "@types/glob": "^5.0.30",
-    "@types/mocha": "^2.2.32",
-    "@types/mz": "^0.0.30",
-    "@types/node": "^6.0.46",
+    "@types/async": "2.0.38",
+    "@types/bluebird": "3.0.37",
+    "@types/chai": "3.4.34",
+    "@types/chai-as-promised": "0.0.29",
+    "@types/glob": "5.0.30",
+    "@types/lodash": "4.14.55",
+    "@types/mocha": "2.2.32",
+    "@types/mz": "0.0.30",
+    "@types/node": "6.0.46",
     "chai": "^3.4.34",
     "chai-as-promised": "^6.0.0",
     "mocha": "^3.2.0",
     "nyc": "^10.1.2",
     "rimraf": "^2.6.1",
-    "sinon": "^1.17.7",
     "source-map-support": "^0.4.11",
     "ts-node": "^1.6.1",
     "tslint": "^4.5.1",
