Revert "Use codecov CLI"
This reverts commit f8f5c64ea9faa51060714c84cd5afdd75e80c623.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ script:
 
 after_success:
   # Upload coverage to codecov
-  - nyc report --reporter=lcov > coverage.lcov && codecov
+  - 'nyc report --reporter=lcov > coverage.lcov && bash <(curl -s https://codecov.io/bash) -f coverage/lcov.info'
