--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,5 +20,7 @@ test_script:
   - yarn run cover
 
 after_test:
-  # Upload coverge to codecov
-  - node_modules\.bin\nyc report --reporter=lcov > coverage.lcov && node_modules\.bin\codecov
+  - ps: |
+      $env:PATH = 'C:\Program Files\Git\usr\bin;' + $env:PATH
+      Invoke-WebRequest -Uri 'https://codecov.io/bash' -OutFile codecov.sh
+      bash codecov.sh -f "coverage\lcov.info"
