--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ test_script:
 
 after_test:
   - ps: |
-      node_modules/.bin/nyc report --reporter=lcov
+      node_modules\.bin\nyc report --reporter=lcov
       $env:PATH = 'C:\Program Files\Git\usr\bin;' + $env:PATH
       Invoke-WebRequest -Uri 'https://codecov.io/bash' -OutFile codecov.sh
       bash codecov.sh -f "coverage\lcov.info"
