--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ version: '{build}'
 clone_depth: 1
 
 cache:
- - '%LOCALAPPDATA%\\Yarn'
+ - '%LOCALAPPDATA%\Yarn'
 
 environment:
   NODEJS_VERSION: '6.9.4'
