Add advanced logging through LSP

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bluebird": "^3.4.7",
     "chai": "^3.4.34",
     "chai-as-promised": "^6.0.0",
+    "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "glob": "^7.1.1",
     "lodash": "^4.17.4",
@@ -52,6 +53,7 @@
     "@types/bluebird": "3.0.37",
     "@types/chai": "3.4.34",
     "@types/chai-as-promised": "0.0.29",
+    "@types/chalk": "0.4.31",
     "@types/glob": "5.0.30",
     "@types/lodash": "4.14.55",
     "@types/mocha": "2.2.32",
