--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "glob": "^7.1.1",
     "lodash": "^4.17.4",
     "mz": "^2.6.0",
+    "semaphore-async-await": "^1.5.1",
     "typescript": "2.2.1",
     "vscode-jsonrpc": "^3.1.0",
     "vscode-languageserver": "^3.1.0",
