Add memoize helper with cancellation support

--- a/package.json
+++ b/package.json
@@ -59,9 +59,11 @@
     "@types/mocha": "2.2.32",
     "@types/mz": "0.0.30",
     "@types/node": "6.0.46",
+    "@types/sinon": "1.16.35",
     "mocha": "^3.2.0",
     "nyc": "^10.1.2",
     "rimraf": "^2.6.1",
+    "sinon": "^2.0.0",
     "source-map-support": "^0.4.11",
     "ts-node": "^1.6.1",
     "tslint": "^4.5.1",
