Fixed Appveyor integration

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,6 +22,6 @@ test_script:
 after_test:
   - ps: |
       node_modules\.bin\nyc report --reporter=lcov
-      $env:PATH = 'C:\Program Files\Git\usr\bin;' + $env:PATH
+      $env:PATH = 'C:\msys64\usr\bin;' + $env:PATH
       Invoke-WebRequest -Uri 'https://codecov.io/bash' -OutFile codecov.sh
       bash codecov.sh -f "coverage\lcov.info"
