--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "chai-as-promised": "^6.0.0",
     "commander": "^2.9.0",
     "glob": "^7.1.1",
+    "iterare": "^0.0.7",
     "lodash": "^4.17.4",
     "mz": "^2.6.0",
+    "semaphore-async-await": "^1.5.1",
     "typescript": "2.2.1",
     "vscode-jsonrpc": "^3.1.0",
     "vscode-languageserver": "^3.1.0",
@@ -57,9 +59,11 @@
     "@types/mocha": "2.2.32",
     "@types/mz": "0.0.30",
     "@types/node": "6.0.46",
+    "@types/sinon": "1.16.35",
     "mocha": "^3.2.0",
     "nyc": "^10.1.2",
     "rimraf": "^2.6.1",
+    "sinon": "^2.0.0",
     "source-map-support": "^0.4.11",
     "ts-node": "^1.6.1",
     "tslint": "^4.5.1",
