--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "target": "es2016",
     "lib": [
-      "es2016"
+      "es2016",
+      "dom"
     ],
     "module": "commonjs",
     "moduleResolution": "node",
