--- a/package.json
+++ b/package.json
@@ -61,12 +61,15 @@
     "@types/mocha": "2.2.32",
     "@types/mz": "0.0.30",
     "@types/node": "6.0.46",
+    "@types/rimraf": "0.0.28",
     "@types/sinon": "1.16.35",
+    "@types/temp": "0.8.29",
     "mocha": "^3.2.0",
     "nyc": "^10.1.2",
     "rimraf": "^2.6.1",
     "sinon": "^2.0.0",
     "source-map-support": "^0.4.11",
+    "temp": "^0.8.3",
     "ts-node": "^1.6.1",
     "tslint": "^4.5.1",
     "typescript-formatter": "^4.0.0"
