--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "iterare": "^0.0.7",
     "lodash": "^4.17.4",
     "mz": "^2.6.0",
-    "opentracing": "^0.13.0",
+    "opentracing": "felixfbecker/opentracing-javascript#d42e8ac50e3555ca1a9a006bee0fd5856a838a47",
     "semaphore-async-await": "^1.5.1",
     "typescript": "2.2.1",
     "vscode-jsonrpc": "^3.1.0",
