--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "watch": "tsc -w"
   },
   "dependencies": {
+    "@reactivex/rxjs": "^5.3.0",
     "async": "^2.1.5",
     "bluebird": "^3.4.7",
     "chai": "^3.4.34",
@@ -43,6 +44,7 @@
     "iterare": "^0.0.7",
     "lodash": "^4.17.4",
     "mz": "^2.6.0",
+    "opentracing": "felixfbecker/opentracing-javascript#d42e8ac50e3555ca1a9a006bee0fd5856a838a47",
     "semaphore-async-await": "^1.5.1",
     "typescript": "2.2.1",
     "vscode-jsonrpc": "^3.1.0",
