--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "iterare": "^0.0.8",
     "lodash": "^4.17.4",
     "mz": "^2.6.0",
+    "object-hash": "^1.1.8",
     "opentracing": "felixfbecker/opentracing-javascript#d42e8ac50e3555ca1a9a006bee0fd5856a838a47",
     "semaphore-async-await": "^1.5.1",
     "typescript": "2.3.0",
@@ -61,6 +62,7 @@
     "@types/mocha": "2.2.40",
     "@types/mz": "0.0.31",
     "@types/node": "7.0.13",
+    "@types/object-hash": "0.5.28",
     "@types/rimraf": "0.0.28",
     "@types/sinon": "2.1.2",
     "@types/temp": "0.8.29",
