--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "vscode-jsonrpc": "^3.1.0",
     "vscode-languageserver": "^3.1.0",
     "vscode-languageserver-types": "^3.0.3",
+    "whatwg-url": "^4.7.1",
     "yarn": "^0.21.3"
   },
   "devDependencies": {
@@ -61,7 +62,7 @@
     "@types/lodash": "4.14.63",
     "@types/mocha": "2.2.41",
     "@types/mz": "0.0.31",
-    "@types/node": "7.0.14",
+    "@types/node": "6.0.70",
     "@types/object-hash": "0.5.28",
     "@types/rimraf": "0.0.28",
     "@types/sinon": "2.1.3",
