--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   },
   "dependencies": {
     "@reactivex/rxjs": "^5.3.0",
-    "bluebird": "^3.4.7",
     "chai": "^3.4.34",
     "chai-as-promised": "^6.0.0",
     "chalk": "^1.1.3",
@@ -49,11 +48,9 @@
     "typescript": "2.3.2",
     "vscode-jsonrpc": "^3.1.0",
     "vscode-languageserver": "^3.1.0",
-    "vscode-languageserver-types": "^3.0.3",
-    "yarn": "^0.21.3"
+    "vscode-languageserver-types": "^3.0.3"
   },
   "devDependencies": {
-    "@types/bluebird": "3.5.2",
     "@types/chai": "3.4.35",
     "@types/chai-as-promised": "0.0.30",
     "@types/chalk": "0.4.31",
@@ -72,9 +69,7 @@
     "sinon": "^2.0.0",
     "source-map-support": "^0.4.11",
     "temp": "^0.8.3",
-    "ts-node": "^3.0.2",
-    "tslint": "^5.0.0",
-    "typescript-formatter": "^5.1.3"
+    "tslint": "^5.0.0"
   },
   "bin": {
     "javascript-typescript-langserver": "./lib/language-server.js",
