--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "lodash": "^4.17.4",
     "mz": "^2.6.0",
     "object-hash": "^1.1.8",
-    "opentracing": "felixfbecker/opentracing-javascript#d42e8ac50e3555ca1a9a006bee0fd5856a838a47",
+    "opentracing": "^0.14.0",
     "semaphore-async-await": "^1.5.1",
     "typescript": "2.3.2",
     "vscode-jsonrpc": "^3.1.0",
