--- a/package.json
+++ b/package.json
@@ -34,14 +34,13 @@
   },
   "dependencies": {
     "@reactivex/rxjs": "^5.3.0",
-    "@types/json-patch": "0.0.29",
     "chai": "^4.0.1",
     "chai-as-promised": "^6.0.0",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
+    "fast-json-patch": "^1.2.2",
     "glob": "^7.1.1",
     "iterare": "^0.0.8",
-    "json-patch": "^0.6.1",
     "lodash": "^4.17.4",
     "mz": "^2.6.0",
     "object-hash": "^1.1.8",
