--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "semaphore-async-await": "^1.5.1",
     "string-similarity": "^1.1.0",
     "typescript": "2.3.4",
-    "vscode-jsonrpc": "3.3.0",
+    "vscode-jsonrpc": "^3.3.1",
     "vscode-languageserver": "^3.1.0",
     "vscode-languageserver-types": "^3.0.3"
   },
