chore(greenkeeper): ignore @types/node from Greenkeeper PRs

--- a/package.json
+++ b/package.json
@@ -96,5 +96,10 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "greenkeeper": {
+    "ignore": [
+      "@types/node"
+    ]
   }
 }
