feat(tracing): add Jaeger for easier OpenTracing
Adds a command line flag and docs to easily set up a Jaeger instance for
debugging performance issues.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "fast-json-patch": "^2.0.2",
     "glob": "^7.1.1",
     "iterare": "^0.0.8",
+    "jaeger-client": "^3.5.3",
     "lodash": "^4.17.4",
     "mz": "^2.6.0",
     "object-hash": "^1.1.8",
