feat: plugin configuration
Exposes initializationOptions containing globalPlugins, allowLocalPluginLoads, pluginProbeLocations
Also removes default config and outdated comments

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,7 @@
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noImplicitAny": true,
-    "strictNullChecks": true,
-    "plugins": [
-      { "name": "tslint-language-service"}
-    ]
+    "strictNullChecks": true
   },
   "include": [
     "src/**/*.ts"
