--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,39 +1,33 @@
 {
-  "version": "0.1.0",
-  "isShellCommand": true,
-  "command": "npm",
-  "args": ["--silent", "run"],
-  "options": {
-    "cwd": "${workspaceRoot}"
-  },
+  "version": "2.0.0",
   "tasks": [
     {
-      "taskName": "build",
-      "isBuildCommand": true,
-      "problemMatcher": "$tsc"
+      "type": "npm",
+      "script": "build",
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "problemMatcher": [
+        "$tsc"
+      ]
     },
     {
-      "taskName": "watch",
+      "type": "npm",
+      "script": "watch",
+      "group": "build",
       "isBackground": true,
-      "problemMatcher": "$tsc-watch"
+      "problemMatcher": [
+        "$tsc-watch"
+      ]
     },
     {
-      "taskName": "clean"
-    },
-    {
-      "taskName": "lint",
-      "problemMatcher": {
-        "pattern": {
-          "regexp": "^(.+)\\((\\d+),(\\d+)\\): (\\w+) (.+)$",
-          "file": 1,
-          "line": 2,
-          "column": 3,
-          "severity": 4,
-          "message": 5
-        },
-        "owner": "tslint",
-        "fileLocation": ["relative", "${workspaceRoot}"]
-      }
+      "type": "npm",
+      "script": "lint",
+      "group": "test",
+      "problemMatcher": [
+        "$tslint5"
+      ]
     }
   ]
 }
