--- a/package.json
+++ b/package.json
@@ -56,18 +56,18 @@
     "vscode-languageserver-types": "^3.0.3"
   },
   "devDependencies": {
-    "@types/chai": "4.0.0",
-    "@types/chai-as-promised": "7.1.0",
-    "@types/chalk": "0.4.31",
-    "@types/glob": "5.0.30",
-    "@types/lodash": "4.14.74",
-    "@types/mocha": "2.2.41",
-    "@types/mz": "0.0.31",
-    "@types/node": "7.0.32",
-    "@types/rimraf": "2.0.2",
-    "@types/object-hash": "0.5.29",
-    "@types/sinon": "2.3.5",
-    "@types/temp": "0.8.29",
+    "@types/chai": "^4.0.0",
+    "@types/chai-as-promised": "^7.1.0",
+    "@types/chalk": "^0.4.31",
+    "@types/glob": "^5.0.30",
+    "@types/lodash": "^4.14.74",
+    "@types/mocha": "^2.2.41",
+    "@types/mz": "^0.0.31",
+    "@types/node": "^7.0.32",
+    "@types/rimraf": "^2.0.2",
+    "@types/object-hash": "^0.5.29",
+    "@types/sinon": "^2.3.5",
+    "@types/temp": "^0.8.29",
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.0.0",
     "husky": "^0.14.0",
