style: use sourcegraph tslint/tsconfig

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "clean": "rimraf lib",
     "cover": "nyc --silent --all --require source-map-support/register mocha --timeout 7000 --slow 2000 lib/test/**/*.js",
     "test": "mocha --require source-map-support/register --timeout 7000 --slow 2000 lib/test/**/*.js",
-    "lint": "tslint -t msbuild -c tslint.json 'src/**/*.ts'",
+    "lint": "tslint -c tslint.json -p .",
     "build": "tsc",
     "watch": "tsc -w",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
@@ -56,16 +56,18 @@
     "vscode-languageserver-types": "^3.0.3"
   },
   "devDependencies": {
+    "@sourcegraph/tsconfig": "^1.0.0",
+    "@sourcegraph/tslint-config": "^2.0.1",
     "@types/chai": "^4.0.0",
     "@types/chai-as-promised": "^7.1.0",
     "@types/chalk": "^0.4.31",
     "@types/glob": "^5.0.30",
-    "@types/lodash": "^4.14.74",
+    "@types/lodash": "^4.14.76",
     "@types/mocha": "^2.2.41",
     "@types/mz": "^0.0.31",
     "@types/node": "^7.0.32",
-    "@types/rimraf": "^2.0.2",
     "@types/object-hash": "^0.5.29",
+    "@types/rimraf": "^2.0.2",
     "@types/sinon": "^2.3.5",
     "@types/temp": "^0.8.29",
     "commitizen": "^2.9.6",
@@ -74,11 +76,12 @@
     "mocha": "^3.2.0",
     "nyc": "^11.0.2",
     "rimraf": "^2.6.1",
-    "sinon": "^4.0.0",
     "semantic-release": "^8.0.0",
+    "sinon": "^4.0.0",
     "source-map-support": "^0.4.11",
     "temp": "^0.8.3",
-    "tslint": "^5.0.0",
+    "tslint": "^5.7.0",
+    "tslint-language-service": "^0.9.6",
     "validate-commit-msg": "^2.12.2"
   },
   "bin": {
