style: use prettier

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "clean": "rimraf lib",
     "cover": "nyc --silent --all --require source-map-support/register mocha --timeout 7000 --slow 2000 lib/test/**/*.js",
     "test": "mocha --require source-map-support/register --timeout 7000 --slow 2000 lib/test/**/*.js",
-    "lint": "tslint -c tslint.json -p .",
+    "lint": "npm run tslint && npm run prettier",
+    "tslint": "tslint -c tslint.json -p .",
+    "prettier": "prettier --list-different --write \"src/**/*.ts\"",
     "build": "tsc",
     "watch": "tsc -w",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
@@ -55,8 +57,9 @@
     "vscode-languageserver-types": "^3.0.3"
   },
   "devDependencies": {
+    "@sourcegraph/prettierrc": "^1.1.0",
     "@sourcegraph/tsconfig": "^1.0.0",
-    "@sourcegraph/tslint-config": "^6.0.0",
+    "@sourcegraph/tslint-config": "^7.0.0",
     "@types/chai": "^4.0.0",
     "@types/chai-as-promised": "^7.1.0",
     "@types/glob": "^5.0.30",
@@ -73,12 +76,13 @@
     "husky": "^0.14.0",
     "mocha": "^4.0.0",
     "nyc": "^11.0.2",
+    "prettier": "^1.7.4",
     "rimraf": "^2.6.1",
     "semantic-release": "^8.0.0",
     "sinon": "^4.0.0",
     "source-map-support": "^0.5.0",
     "temp": "^0.8.3",
-    "tslint": "^5.7.0",
+    "tslint": "^5.8.0",
     "tslint-language-service": "^0.9.6",
     "validate-commit-msg": "^2.12.2"
   },
