style: update configs

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,6 +28,13 @@
       "problemMatcher": [
         "$tslint5"
       ]
+    },
+    {
+      "type": "npm",
+      "script": "tslint",
+      "problemMatcher": [
+        "$tslint5"
+      ]
     }
   ]
 }
