chore(npmignore): extend .npmignore

--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,22 @@
-node_modules/
-src/
+.editorconfig
+.gitattributes
 .idea/
-.vscode/
 .nyc_output/
-coverage/
+.prettierignore
+.travis.yml
+.vscode/
 *.iml
+*.log
+appveyor.yml
+CONTRIBUTING.md
+coverage.*
+coverage/
+DCO
+lib/test/
+node_modules/
 npm-debug.log
+prettier.config.js
+src/
+tsconfig.json
+tslint.json
 yarn.lock
