--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "prettier": "prettier --list-different --write \"src/**/*.ts\"",
     "build": "tsc",
     "watch": "tsc -w",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "semantic-release": "semantic-release",
     "commitmsg": "validate-commit-msg"
   },
   "dependencies": {
@@ -57,6 +57,8 @@
     "vscode-languageserver-types": "^3.0.3"
   },
   "devDependencies": {
+    "@semantic-release/github": "^1.0.0",
+    "@semantic-release/npm": "^1.0.0",
     "@sourcegraph/prettierrc": "^1.1.0",
     "@sourcegraph/tsconfig": "^1.0.0",
     "@sourcegraph/tslint-config": "^8.0.0",
@@ -78,7 +80,7 @@
     "nyc": "^11.0.2",
     "prettier": "1.8.2",
     "rimraf": "^2.6.1",
-    "semantic-release": "^8.0.0",
+    "semantic-release": "^10.0.1",
     "sinon": "^4.0.0",
     "source-map-support": "^0.5.0",
     "temp": "^0.8.3",
@@ -96,6 +98,12 @@
     ],
     "exclude": [
       "lib/test/**/*.js"
+    ]
+  },
+  "release": {
+    "verifyConditions": [
+      "@semantic-release/github",
+      "@semantic-release/npm"
     ]
   },
   "config": {
