--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ jobs:
     - stage: release
       node_js: '8'
       script:
+        - npm run build
         - npm run semantic-release
 
 stages:
