--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "object-hash": "^1.1.8",
     "opentracing": "^0.14.0",
     "rxjs": "^5.5.0",
+    "safe-decode-uri-component": "^1.1.3",
     "semaphore-async-await": "^1.5.1",
     "string-similarity": "^1.1.0",
     "typescript": "2.7.2",
