fix: use safe-decode-uri-component
This takes care of file names with `'%'` character. File names like
these can be automatically created by IDEs for backup.
Also, added a test for adding file with `'%'` character to `InMemoryFileSystem`.

Fixes #422

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "sourceMap": true,
     "declaration": true,
     "strictFunctionTypes": false,
+    "esModuleInterop": true,
     "strictPropertyInitialization": false,
     "plugins": [
       {
