chore(package): add package-lock.json

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,12 @@ cache:
   directories:
     - $HOME/.npm
 
+before_install:
+  - npm install -g npm@6.0.0
+
+install:
+  - npm ci
+
 script:
   - npm run lint
   - npm run build
