--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,10 @@
 {
-  "extends": [
-    "config:base"
-  ],
-  "statusCheckVerify": true,
-  "ignoreDeps": [
-    "@types/node"
-  ]
+  "extends": ["github>sourcegraph/renovate-config"],
+  "semanticCommits": true,
+  "travis": {
+    "enabled": true
+  },
+  "node": {
+    "supportPolicy": ["lts"]
+  }
 }
